<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
            android:background="@drawable/bg">

    <TextView
        android:id="@+id/new_password_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_prompt"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_requirements"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_submit"
        android:onClick="savePassword"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>